[tool.poetry]
name = "project-pichugin-b24-505"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "project_func" },
]


[tool.poetry.dependencies]
python = "^3.11"
make = "*"
prompt = "^0.4.1"


[tool.poetry.scripts]
project = "project_func.scripts.main_base:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
